v3.5.6 (XXXX-XX-XX)
-------------------

* Correct some log entries.

* The `_from` and `_to` attributes of an edge document can now be edited from
  within the UI.

* In case a document got requested via the UI of a collection which does not
  exist, the UI now properly displays an error view instead of having a bad
  display state.

* The Web UI is now reporting errors properly in case of editing ArangoSearch
  Views with invalid properties.

* Web UI: Removed unnecessary menubar entry in case of database node inspection.

* Fix undistribute-remove-after-enum-coll which would allow calculations to be
  pushed to a DBServer which are not allowed to run there.

* Removed the edge id's hover styling in case of embedded document editor in 
  the Web UI as this functionality is disabled. This was misleading because
  the elements are not clickable.

* The Web UI is not disabling the query import button after file upload takes
  place.

* In case of a graph deletion failure, the Web UI displays now the correct
  error message.

* Returned `AQL_WARNING()` to emit warnings from UDFs.

* Allows restoring collections from v3.3.0 with their all-numeric collection
  GUID values, by creating a new, unambiguous collection GUID for them.
  v3.3.0 had a bug because it created all-numeric GUID values, which can be
  confused with numeric collection ids in lookups. v3.3.1 already changed the
  GUID routine to produce something non-numeric already, but collections created
  with v3.3.0 can still have an ambiguous GUID. This fix adjusts the restore
  routine to drop such GUID values, so it only changes something if v3.3.0
  collections are dumped, dropped on the server and then restored with the
  flawed GUIDs.

* The Web UI's replication view is now checking the replication state
  automatically without the need of a manual reload.

* Disallow using V8 dependent functions in SEARCH statement.

* Changing the current users profile icon in the Web UI now renders the new